Refactor gradle.build