@@ -1,73 +1,148 @@
 buildscript {
     def tomcatGradlePluginVersion = '1.2.4'
+    def propdepsPluginVersion = '0.0.7'
 
-    // Repositories for the dependencies used for building the gradle script itself
     repositories {
         mavenCentral()
         jcenter()
+        maven {
+            url "http://download.java.net/maven/2"
+        }
+        maven {
+            url 'http://repo.spring.io/plugins-release'
+        }
     }
 
     // Dependencies used for building the gradle script itself
     dependencies {
         classpath "org.gradle.api.plugins:gradle-tomcat-plugin:${tomcatGradlePluginVersion}"
+        classpath "org.springframework.build.gradle:propdeps-plugin:${propdepsPluginVersion}"
     }
 }
 
-apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'tomcat'
+apply plugin: 'propdeps'
+apply plugin: 'propdeps-maven'
+apply plugin: 'propdeps-idea'
+apply plugin: 'idea'
+apply plugin: 'base'
+apply plugin: 'jetty'
+apply plugin: 'java'
 
 // External libs
-def tomcatVersion = '7.0.11'
-def hibernateORMVersion = '4.3.6.Final'
-def hibernateEntityManagerVersion = '4.3.6.Final'
-def hibernateValidatorVersion = '5.1.1.Final'
-def springFrameworkVersion = '4.0.6.RELEASE'
-def springSecurityVersion = '3.2.4.RELEASE'
-
-// Root Project
-version = '0.1'
-
-// Wrapper
+def apnsVersion = '1.0.0.Beta1' // '1.0.0.Beta3'
+def aspectJRTVersion = '1.6.12' // '1.8.1'
+def aspectJWeaverVersion = '1.6.12' // '1.8.1'
+def cglibVersion = '2.2.2' // '3.1'
+def hibernateEntityManagerVersion = '4.1.5.SP1' // '4.3.6.Final'
+def hibernateJPAAPI20Version = '1.0.1.Final'
+//def hibernateJPAAPI21Version = '1.0.0.Final'
+def hibernateCoreVersion = '4.1.5.SP1' // '4.3.6.Final'
+def hibernateValidatorVersion = '4.3.0.Final' // '5.1.1.Final'
+def jacksonCoreVersion = '2.3.3' // '2.4.1.1'
+def jacksonDatabindVersion = '2.2.2' // '2.4.1.3'
+def javaxServletAPIVersion = '3.0.1' // '3.1.0'
+def jaxbAPIVersion = '2.2.9' // '2.2.11'
+def jsonPathVersion = '0.8.1' // '0.9.1'
+def logbackCoreVersion = '0.9.17' // '1.1.2'
+def mysqlConnectorJDBCVersion = '5.0.8' // '5.1.31'
+def slf4jAPIVersion = '1.5.8' // '1.7.7'
+def slf4jSimpleVersion = '1.5.8' // '1.7.7'
+def springDataJPAVersion = '1.3.0.RELEASE' // '1.6.1.RELEASE'
+def springFrameworkVersion = '3.1.2.RELEASE' // '4.0.6.RELEASE'
+def springHateoasVersion = '0.7.0.RELEASE' // '0.14.0.RELEASE'
+//def springSecurityVersion =  // '3.2.4.RELEASE'
+def tomcatVersion = '7.0.42' // '7.0.11'
 def wrapperGradleVersion = '2.0'
 
-// Repositories for the dependencies used for building the project
 repositories {
     mavenCentral()
     jcenter()
     maven {
-        url 'https://repository.jboss.org/nexus/content/groups/public/org/hibernate'
+        url "http://download.java.net/maven/2"
+    }
+    maven {
+        url 'http://repo.spring.io/release/'
     }
 }
 
-// Dependencies used for building the project
 dependencies {
-    // Shortcut: compile 'org.hibernate:hibernate-core:3.6.7.Final'
-    compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateORMVersion
+    // slf4j, used by Hibernate for logging
+    compile group: 'org.slf4j', name: 'slf4j-api', version: slf4jAPIVersion
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: slf4jSimpleVersion
+
+    compile group: 'ch.qos.logback', name: 'logback-core', version: logbackCoreVersion
+
+    providedCompile "javax.servlet:javax.servlet-api:${javaxServletAPIVersion}"
+//    compile "javax.servlet:javax.servlet-api:${javaxServletAPIVersion}"
+
+    // Spring
+    compile group: "org.springframework.data", name: "spring-data-jpa", version: springDataJPAVersion
+    compile group: "org.springframework", name: "spring-jdbc", version: springFrameworkVersion
+    compile group: "org.springframework", name: "spring-tx", version: springFrameworkVersion
+    compile group: "org.springframework", name: "spring-orm", version: springFrameworkVersion
+    compile group: "org.springframework", name: "spring-aop", version: springFrameworkVersion
+    compile group: "org.springframework", name: "spring-webmvc", version: springFrameworkVersion
+    compile group: "org.springframework", name: "spring-oxm", version: springFrameworkVersion
+//    compile group: 'org.springframework.security', name: 'spring-security-web', version: springSecurityVersion
+    compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version: springHateoasVersion
+
+    // Annotation support
+    compile group: 'cglib', name: 'cglib-nodep', version: cglibVersion
+    compile group: 'org.aspectj', name: 'aspectjrt', version: aspectJRTVersion
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: aspectJWeaverVersion
+
+    // Hibernate
+    compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateCoreVersion
     compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: hibernateEntityManagerVersion
     compile group: 'org.hibernate', name: 'hibernate-validator', version: hibernateValidatorVersion
+//    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: hibernateJPAAPI21Version
+    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.0-api', version: hibernateJPAAPI20Version
 
-    // Tomcat, via https://github.com/bmuschko/gradle-tomcat-plugin
+    // MySQL
+    compile group:'mysql', name: 'mysql-connector-java', version: mysqlConnectorJDBCVersion
+
+    // Test
+    testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
+    testCompile 'junit:junit:4.+'
+    testCompile "org.mockito:mockito-all:1.9.5"
+
+
+    // Tomcat
     tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}"
     tomcat "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}"
     tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
         exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
     }
 
-    // Spring, via http://projects.spring.io/
-    compile group: 'org.springframework', name: 'spring-context', version: springFrameworkVersion
-    compile group: 'org.springframework.security', name: 'spring-security-web', version: springSecurityVersion
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: jacksonCoreVersion
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonDatabindVersion
 
-    // Tests
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: jaxbAPIVersion
+
+    compile group: 'com.notnoop.apns', name: 'apns', version: apnsVersion
+
+    compile group: 'com.jayway.jsonpath', name: 'json-path', version: jsonPathVersion
 }
+
+task copyToLib(type: Copy) {
+    into "$buildDir/output/lib"
+    from configurations.runtime
+}
+
+build.dependsOn copyToLib
+
+tomcatRunWar.contextPath = ''
+
+//export GRADLE_OPTS=-XX:MaxPermSize=256m
 
 // Tomcat configuration, via https://github.com/bmuschko/gradle-tomcat-plugin
-tomcat {
-    httpPort = 8090
-    httpsPort = 8091
-    enableSSL = true
-}
+//tomcat {
+//    httpPort = 8090
+//    httpsPort = 8091
+//    enableSSL = true
+//}
 
 task wrapper(type: Wrapper) {
     gradleVersion = wrapperGradleVersion
